--- a/public/style.css
+++ b/public/style.css
@@ -1,46 +1,98 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Cairo:wght@200;300;400;500;600;700;800;900&family=Mountains+of+Christmas:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Special+Elite&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Cairo:wght@200;300;400;500;600;700;800;900&family=Mountains+of+Christmas:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Special+Elite&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    font-family: Roboto, Arial;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, Arial;
 }
 
 header {
-    padding: 3rem;
-    background-color: red;
+  padding: 3rem;
+  background-color: red;
 }
 
-header h1{
-    color: #fff;
-    font-size: 3rem;
-    text-align: center;
+header h1 {
+  color: #fff;
+  font-size: 3rem;
+  text-align: center;
 }
 
 main {
-    margin: 0 10rem 0 10rem;
+  margin: 0 10rem 0 10rem;
 }
 
 section#cards {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 5rem;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin-top: 5rem;
 }
 
 section#cards div.card {
-    width: 20rem;
-    box-shadow: 5px 5px 5px #00000015;
-    padding: 1rem;
+  width: 20rem;
+  box-shadow: 5px 5px 5px #00000015;
+  padding: 1rem;
+  margin-top: 3rem;
 }
 
-section#cards div.card img{
-    width: 100%;
+section#cards div.card img {
+  width: 100%;
 }
 
-section#cards div.card h2{
-    margin-bottom: 1rem;
+section#cards div.card h2 {
+  margin-bottom: 1rem;
 }
 
-section#cards div.card p.descricao{
-    margin-bottom: 1rem;
+section#cards div.card p.descricao {
+  margin-bottom: 1rem;
+}
+
+section#cadastro form {
+  width: 50%;
+}
+
+section#cadastro {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 5rem;
+}
+
+section#cadastro h2 {
+  width: 100%;
+  text-align: center;
+  padding-bottom: 5rem;
+}
+
+section#cadastro form input {
+  width: 100%;
+  padding: 0.7rem;
+  font-size: 1rem;
+  outline: none;
+  border: solix 2px rgb(184, 180, 180);
+  margin: 0 1rem 1rem 1rem;
+}
+
+section#cadastro form label {
+  margin: 1rem;
+  color: rgb(184, 180, 180);
+}
+
+section#cadastro form button {
+  padding: 0.8rem;
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  font-size: 1rem;
+  background-color: #fff;
+  border: solid 1px red;
+  color: red;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+section#cadastro form button:hover {
+  background-color: red;
+  color: #fff;
 }
