--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Pokedéx</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header>
+      <h1>Pokedéx</h1>
+    </header>
 
-<header>
-
-    <h1>Pokedéx</h1>
-
-</header>
-  
-<main>
-    <section id="cards">
-
-    <% pokedex.forEach((pokemon) => { %> 
+    <main>
+      <section id="cards">
+        <% pokedex.forEach((pokemon) => { %>
         <div class="card">
-            <img src="<%= pokemon.imagem %>" alt="">
-            <h2><%= pokemon.nome %></h2>
-            <p class="descricao"><%= pokemon.descricao %></p>
-            <p>Type: <%= pokemon.tipo %></p>
+          <img src="<%= pokemon.imagem %>" alt="" />
+          <h2><%= pokemon.nome %></h2>
+          <p class="descricao"><%= pokemon.descricao %></p>
+          <p>Type: <%= pokemon.tipo %></p>
         </div>
-        <% }) %>    
-        
-        </section>
+        <% }) %>
+      </section>
 
-</main>
+      <section id="cadastro">
+        <h2>Cadastre um novo Pokemon</h2>
 
-</body>
+        <form action="/add" method="post">
+          <label for="nome">Nome:</label>
+          <input type="text" id="nome" name="nome" />
+
+          <label for="descricao">Descrição:</label>
+          <input type="text" name="descricao" id="descricao" />
+
+          <label for="tipo">Tipo:</label>
+          <input type="text" name="tipo" id="tipo" />
+
+          <label for="imagem">Link da Imagem:</label>
+          <input type="text" name="imagem" id="imagem" />
+
+          <button id="btnCadastrar" type="submit">Cadastrar</button>
+        </form>
+      </section>
+    </main>
+  </body>
 </html>
