--- a/public/style.css
+++ b/public/style.css
@@ -6,13 +6,17 @@
   font-family: Roboto, Arial;
 }
 
+body {
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9m4UheNYKRdSvz3TyJxJhurxKndA6yoFKewGTgHI0twn1AU8a67UDiWoIkSvusaerjO4&usqp=CAU);
+}
+
 header {
   padding: 3rem;
-  background-color: red;
+  background-color: rgb(209, 125, 125);
 }
 
 header h1 {
-  color: #fff;
+  color: rgb(251, 249, 249);
   font-size: 3rem;
   text-align: center;
 }
@@ -35,16 +39,43 @@ section#cards div.card {
   margin-top: 3rem;
 }
 
+section#cards div.card a {
+  padding: .4rem;
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  font-size: 1rem;
+  background-color: rgba(255, 255, 255, 0.305);
+  border: solid 1px rgb(209, 125, 125);
+  color: rgb(209, 125, 125);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  text-decoration: none;
+  margin-bottom: 1rem;
+}
+
+section#cards  div.card a:hover{
+  background-color: red;
+  color:#fff;
+}
+
+section#cards h3 {
+  width: 100%;
+  text-align: center;
+}
+
 section#cards div.card img {
   width: 100%;
 }
 
-section#cards div.card h2 {
+section#cards div.card h3 {
   margin-bottom: 1rem;
 }
 
 section#cards div.card p.descricao {
   margin-bottom: 1rem;
+  font-weight: 999;
 }
 
 section#cadastro form {
@@ -79,15 +110,15 @@ section#cadastro form label {
 }
 
 section#cadastro form button {
-  padding: 0.8rem;
+  padding: .8rem;
   width: 20%;
   display: flex;
   justify-content: center;
   margin: 0 auto;
   font-size: 1rem;
   background-color: #fff;
-  border: solid 1px red;
-  color: red;
+  border: solid 1px rgb(209, 125, 125);
+  color: rgb(209, 125, 125);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
