--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,25 +9,16 @@
   </head>
   <body>
     <header>
-      <h1>Pokedéx</h1>
+      <h1>POKEDÉX</h1>
     </header>
 
     <main>
-      <section id="cards">
-        <% pokedex.forEach((pokemon) => { %>
-        <div class="card">
-          <img src="<%= pokemon.imagem %>" alt="" />
-          <h2><%= pokemon.nome %></h2>
-          <p class="descricao"><%= pokemon.descricao %></p>
-          <p>Type: <%= pokemon.tipo %></p>
-        </div>
-        <% }) %>
-      </section>
 
       <section id="cadastro">
+        <% if (pokemon == undefined) { %>
         <h2>Cadastre um novo Pokemon</h2>
 
-        <form action="/add" method="post">
+        <form action="/create" method="post">
           <label for="nome">Nome:</label>
           <input type="text" id="nome" name="nome" />
 
@@ -42,6 +33,51 @@
 
           <button id="btnCadastrar" type="submit">Cadastrar</button>
         </form>
+
+        <% }else { %>
+
+        <h2>Atualização do Pokemon</h2>
+
+        <form action="/update/<%= pokemon.id %>" method="POST">
+          <label for="nome">Nome:</label>
+          <input type="text" id="nome" name="nome" value="<%= pokemon.nome%>" />
+
+          <label for="descricao">Descrição:</label>
+          <input
+            type="text"
+            name="descricao"
+            id="descricao"
+            value="<%= pokemon.descricao%>"
+          />
+
+          <label for="tipo">Tipo:</label>
+          <input type="text" name="tipo" id="tipo" value="<%= pokemon.tipo%>" />
+
+          <label for="imagem">Link da Imagem:</label>
+          <input
+            type="text"
+            name="imagem"
+            id="imagem"
+            value="<%= pokemon.imagem%>"
+          />
+
+          <button id="btnAtualizar" type="submit">Atualizar</button>
+        </form>
+        <% } %>
+      </section>
+
+      <section id="cards">
+        <h3>Lista de Pokemons</h3>
+
+        <% pokedex.forEach((pokemon) => { %>
+        <div class="card">
+          <img src="<%= pokemon.imagem %>" alt="" />
+          <h2><%= pokemon.nome %></h2>
+          <p class="descricao"><%= pokemon.descricao %></p>
+          <p>Type: <%= pokemon.tipo %></p>
+          <a href="/detalhes/<%= pokemon.id %>">Editar</a>
+        </div>
+        <% }) %>
       </section>
     </main>
   </body>
