--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,14 +48,14 @@ nav {
   display: flex;
 }
 
-nav ul{
+nav ul {
   display: flex;
   align-items: center;
   list-style: none;
 }
 
-nav ul li{
-padding: .6;
+nav ul li {
+  padding: 0.6;
 }
 
 nav h1 {
@@ -83,7 +83,7 @@ section#cards div.card {
 }
 
 section#cards div.card a {
-  padding: .4rem;
+  padding: 0.4rem;
   width: 20%;
   display: flex;
   justify-content: center;
@@ -98,9 +98,9 @@ section#cards div.card a {
   margin-bottom: 1rem;
 }
 
-section#cards  div.card a:hover{
+section#cards div.card a:hover {
   background-color: red;
-  color:#fff;
+  color: #fff;
 }
 
 section#cards h3 {
@@ -153,7 +153,7 @@ section#cadastro form label {
 }
 
 section#cadastro form button {
-  padding: .8rem;
+  padding: 0.8rem;
   width: 20%;
   display: flex;
   justify-content: center;
@@ -172,8 +172,8 @@ section#cadastro form button:hover {
 }
 
 footer {
-  background-color:  rgb(209, 125, 125);
-  padding: .5rem;
+  background-color: rgb(209, 125, 125);
+  padding: 0.5rem;
   text-align: center;
   color: aliceblue;
   font-size: 1rem;
